--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,57 @@
-/**/build
-/**/Thumbs.db
-# visual studio code
-.vscode
+# Prerequisites
+*.d
 
-# mac
-.DS_Store
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
 
-# variable environnement
-.env
+# Linker output
+*.ilk
+*.map
+*.exp
 
-#fichier .o
-.o
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
+
+# Other
+build/
+.vscode/
+
