--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(game_test_abdouldiallo game_test_abdouldiallo.c)
 add_executable(game_test_arledoux game_test_arledoux.c)
 
 #Libraries:
-add_library(game game.c game_aux.c queue.c)
+add_library(game game.c game_aux.c game_tools.c queue.c)
 
 target_link_libraries(game_text game ) 
 target_link_libraries(game_test_abdouldiallo game ) 
