--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,8 +72,8 @@ add_test(test_arledoux_game_nb_cols ./game_test_arledoux game_nb_cols)
 add_test(test_arledoux_game_is_wrapping ./game_test_arledoux game_is_wrapping)
 
 #Tests Loïc ;
-add_test(test_lorichard_game_load ./game_test_lorichard game_load)
+#add_test(test_lorichard_game_load ./game_test_lorichard game_load)
 
 #Tests Renaud:
-#add_test(test_rmachecourtb_game_load ./game_test_rmachecourtb game_load)
+add_test(test_rmachecourtb_game_load ./game_test_rmachecourtb game_load)
 add_test(test_rmachecourtb_game_save ./game_test_rmachecourtb game_save)
