test debug game_solve (related to  #6)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ add_test(test_arledoux_game_is_wrapping ./game_test_arledoux game_is_wrapping)
 
 #Tests Loïc ;
 #add_test(test_lorichard_game_load ./game_test_lorichard game_load)
+add_test(test_lorichard_game_solve ./game_test_lorichard game_solve)
 
 #Tests Renaud:
 add_test(test_rmachecourtb_game_load ./game_test_rmachecourtb game_load)
