--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_C_FLAGS_RELEASE "-O3")               # options de compilation en mode 
 
 #Executable tests:
 add_executable(game_text game_text.c)
+add_executable(game_solve game_solve.c)
 
 add_executable(game_test_maaudrain game_test_maaudrain.c)
 add_executable(game_test_lorichard game_test_lorichard.c)
@@ -26,6 +27,7 @@ target_link_libraries(game_test_maaudrain game )
 target_link_libraries(game_test_arledoux game )
 target_link_libraries(game_test_lorichard game )
 target_link_libraries(game_test_rmachecourtb game)
+target_link_libraries(game_solve game)
 
 #Tests dummy
 add_test(test_maaudrain_dummy ./game_test_maaudrain dummy)
@@ -74,8 +76,9 @@ add_test(test_arledoux_game_nb_cols ./game_test_arledoux game_nb_cols)
 add_test(test_arledoux_game_is_wrapping ./game_test_arledoux game_is_wrapping)
 
 #Tests Loïc ;
-#add_test(test_lorichard_game_load ./game_test_lorichard game_load)
+add_test(test_lorichard_game_load ./game_test_lorichard game_load)
 add_test(test_lorichard_game_solve ./game_test_lorichard game_solve)
+add_test(test_lorichard_game_nb_solutions ./game_test_lorichard game_nb_solutions)
 
 #Tests Renaud:
 add_test(test_rmachecourtb_game_load ./game_test_rmachecourtb game_load)
