--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ add_test(test_arledoux_game_is_wrapping ./game_test_arledoux game_is_wrapping)
 
 #Tests Loïc ;
 #add_test(test_lorichard_game_load ./game_test_lorichard game_load)
-#add_test(test_lorichard_game_solve ./game_test_lorichard game_solve)
+add_test(test_lorichard_game_solve ./game_test_lorichard game_solve)
 add_test(test_lorichard_game_nb_solutions ./game_test_lorichard game_nb_solutions)
 
 #Tests Renaud:
