redimension quasi ok (related to #10)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ include(CTest)
 enable_testing()
 
 set(CMAKE_C_FLAGS "-Wall -std=c99")            # options de compilation génériques
-set(CMAKE_C_FLAGS_DEBUG "-g -O0 --coverage")   # options de compilation en mode Debug
+set(CMAKE_C_FLAGS_DEBUG "-g -D DEBUG -O0 --coverage")   # options de compilation en mode Debug
 set(CMAKE_C_FLAGS_RELEASE "-O3")               # options de compilation en mode Release
 
 ## use a CMake3 package to solve SDL2 dependencies
