ajout gitignore (related to #11)

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,14 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+
+# portage android
+android/bin/*
+android/jni/SDL*
+android/libs/*
+android/obj/*
+android/gen/*
+
 # Other
 build/
 .vscode/
