--- a/android/build.xml
+++ b/android/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="Lightup" default="help">
+<project name="DontBeShy" default="help">
 
   <property name="target" value="android-23" />
 
